--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,6 @@
 name: shfmt # you probably want to 'snapcraft register <name>'
-version: "2.6.4" # just for humans, typically '1.2+git' or '1.3.2'
+base: core18
+version: "3.1.0" # just for humans, typically '1.2+git' or '1.3.2'
 summary: A shell parser, formatter and interpreter (POSIX/Bash/mksh). # 79 char long summary
 description: |
   "A shell parser, formatter and interpreter (POSIX/Bash/mksh)."
@@ -9,18 +10,19 @@ grade: stable
 
 parts:
   shfmt:
-    # See 'snapcraft plugins'
-    plugin: dump
-    source: .
-    prepare: |
-      chmod +x prep/extractor.sh
-      prep/extractor.sh
-    organize:
-      shfmt: bin/shfmt
+    # Use the nil plugin with wget until bz2 is supported by snapcraft.
+    plugin: nil
+    build-packages:
+      - wget
+    override-pull: |
+      wget https://github.com/mvdan/sh/releases/download/v$SNAPCRAFT_PROJECT_VERSION/$SNAPCRAFT_PROJECT_NAME_v$SNAPCRAFT_PROJECT_VERSION_linux_$SNAP_ARCH
+    override-build: |
+      snapcraftctl build
+      install $SNAPCRAFT_PROJECT_NAME_v$SNAPCRAFT_PROJECT_VERSION_linux_$SNAP_ARCH $SNAPCRAFT_PART_INSTALL/shfmt
 
 apps:
   shfmt:
-    command: bin/shfmt
+    command: shfmt
     plugs:
       - home
       - network
