--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,7 +3,9 @@ base: core18
 version: "3.1.0" # just for humans, typically '1.2+git' or '1.3.2'
 summary: A shell parser, formatter and interpreter (POSIX/Bash/mksh). # 79 char long summary
 description: |
-  "A shell parser, formatter and interpreter (POSIX/Bash/mksh)."
+  A shell parser, formatter and interpreter (POSIX/Bash/mksh).
+
+  To read your `~/.editorconfig` file you will need to run: `sudo snap connect shfmt:read-editorconfig`
 
 confinement: strict # use 'strict' once you have the right plugs and slots
 grade: stable
@@ -26,3 +28,10 @@ apps:
     plugs:
       - home
       - network
+      - read-editorconfig
+
+plugs:
+  read-editorconfig:
+    interface: personal-files
+    read:
+      - $HOME/.editorconfig
