--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,7 @@
 name: shfmt # you probably want to 'snapcraft register <name>'
 base: core18
 version: "3.1.1" # just for humans, typically '1.2+git' or '1.3.2'
+license: "BSD-3-Clause"
 summary: A shell parser, formatter and interpreter (POSIX/Bash/mksh). # 79 char long summary
 description: |
   "A shell parser, formatter and interpreter (POSIX/Bash/mksh)."
