--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,6 +11,7 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 grade: stable
 architectures:
   - build-on: amd64
+  - build-on: arm64
 parts:
   shfmt:
     # Use the nil plugin with wget until bz2 is supported by snapcraft.
