🐛   Added access to ~/.editorconfig
- Fix: https://github.com/bashfulrobot/snapcrafters-shfmt/issues/1

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,6 +11,13 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 grade: stable
 architectures:
   - build-on: amd64
+
+plugs:
+  dot-editorconfig:
+    interface: personal-files
+    read:
+      - $HOME/.editorconfig
+
 parts:
   shfmt:
     # Use the nil plugin with wget until bz2 is supported by snapcraft.
@@ -29,3 +36,4 @@ apps:
     plugs:
       - home
       - network
+      - dot-editorconfig
